[tool.poetry]
name = "ryojerryyu"
version = "0.1.0"
description = ""
authors = ["RyoJerryYu <tzl19961216@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Jinja2= "==3.1.2"
PyGithub= "==1.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
